# kali

./: Cargo.toml  LICENSE  README.md
kali/: Cargo.toml
kali-macros/: Cargo.toml
kali-macros/src/: lib.rs
kali/src/: bindable.rs  column.rs  entity.rs  expr.rs  lib.rs  main.rs  ordering.rs  query_builder.rs  reference.rs
kali/src/builder/: expr.rs  mod.rs  ordering.rs
kali/tests/: query_builder.rs  struct_utils.rs
kali/tests/fixtures/: posts.sql  profiles.sql  users.sql
kali/tests/migrations/: 1_user.sql  2_profile.sql
src/: collection.rs  column.rs  lib.rs
src/builder/: expr.rs  mod.rs  value.rs
tests/: relations.rs  struct_utils.rs
tests/fixtures/: users.sql
tests/migrations/: 3_post.sql
