[package]
name = "kali-macros"
description = "Macros for kali, a query builder and orm-ish crate built on sqlx"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
