[package]
name = "kali"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = ["sqlite"] }
tracing = { version = "0.1", default-features = false }
kali-macros = { path = "../kali-macros" }
# temp
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"

[dev-dependencies]
anyhow = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
